objects/SLCA2__CA_Groups__c.object
<CustomObject>
    <description>setting for Calendars groups</description>
    <fields>
        <fullName>SLCA2__calendars__c</fullName>
        <label>calendars</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLCA2__color__c</fullName>
        <defaultValue>&apos;rgb(200,100,0)&apos;</defaultValue>
        <label>color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__friendlyName__c</fullName>
        <label>friendlyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__groupColor__c</fullName>
        <label>groupColor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>group</fullName>
                </value>
                <value>
                    <fullName>calendar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLCA2__includingCalendarsListLabel__c</fullName>
        <label>calendarsListLabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CA_Groups</label>
    <nameField>
        <label>CA_Groups Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_GroupsPlural</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>SLCA2__emptyGroupName</fullName>
        <active>true</active>
        <errorConditionFormula>Name  = &apos;&apos;</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Group Name is required</errorMessage>
    </validationRules>
</CustomObject>